syntax = "proto3";

option csharp_namespace = "UserService.Grpc";

package userService;

service MealPlanService {
    rpc CalculateKcalAndMacros (GetKcalAndMacrosRequest) returns (GetKcalAndMacrosResponse);
}

message GetKcalAndMacrosRequest {
    string mealPlanId = 1;
    string profileId = 2;
    double bodyWeight = 3;
    double dailyKcal = 4;
}

message GetKcalAndMacrosResponse {
    double calories = 1;
    double proteins = 2;
    double fats = 3;
    double carbohydrates = 4;
}
